testData/inspections/referencePattern/referenceInvalidPattern.adoc

[[<error descr="Block ID pattern invalid, must not contain spaces or tabs">invalid blank</error>]]

[[<error descr="Block ID pattern invalid, problem starting at '!'">invalid!exclamation</error>]]
